--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@envc/core",
+  "name": "@senv/core",
   "version": "1.0.0",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts"
