--- a/package.json
+++ b/package.json
@@ -6,18 +6,18 @@
     "packages/*"
   ],
   "scripts": {
-    "start": "tsc --build --watch",
+    "dev": "tsc --build --watch",
     "test": "jest"
   },
-  "devDependencies": {
-    "@babel/preset-env": "7.8.4",
-    "@babel/preset-typescript": "7.8.3",
-    "jest": "25.1.0",
-    "prettier": "1.19.1"
-  },
   "dependencies": {
-    "@types/jest": "25.1.3",
-    "@types/node": "13.7.6",
-    "typescript": "3.8.2"
+    "@babel/preset-env": "7.8.7",
+    "@babel/preset-typescript": "7.8.3",
+    "@types/jest": "25.1.4",
+    "@types/node": "13.9.0",
+    "jest": "25.1.0",
+    "typescript": "3.8.3"
+  },
+  "devDependencies": {
+    "prettier": "1.19.1"
   }
 }
