--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -8,9 +8,9 @@
   },
   "dependencies": {
     "@senv/core": "1.0.0",
-    "@types/commander": "2.12.2",
-    "@types/execa": "^2.0.0",
-    "commander": "4.1.0",
-    "execa": "^4.0.0"
+    "@types/execa": "2.0.0",
+    "@types/yargs": "15.0.4",
+    "execa": "4.0.0",
+    "yargs": "15.3.1"
   }
 }
