--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "@senv/core": "1.0.0",
+    "@types/chalk": "2.2.0",
     "@types/execa": "2.0.0",
     "@types/yargs": "15.0.4",
+    "chalk": "4.0.0",
     "execa": "4.0.0",
     "yargs": "15.3.1"
   }
