Update monorepo configuration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,10 @@
 {
   "files": [],
+  "compilerOptions": {
+    "baseUrl": "./packages",
+    "paths": {
+      "@senv/*": ["./*/src"]
+    }
+  },
   "references": [{ "path": "./packages/cli" }, { "path": "./packages/core" }]
 }
