--- a/examples/next.js/package.json
+++ b/examples/next.js/package.json
@@ -1,16 +1,14 @@
 {
   "name": "nextjs",
-  "version": "0.1.0",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "senv load next dev",
-    "build": "senv load next build",
-    "start": "senv load next start"
+    "start": "senv load next dev"
   },
   "dependencies": {
-    "@senv/cli": "1.0.0",
-    "next": "9.4.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "@senv/cli": "*",
+    "next": "12.0.7",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   }
 }
