--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# Turbo
+.turbo
+
 # Build
-/packages/**/dist
-/packages/**/tsconfig.tsbuildinfo
+dist
+tsconfig.tsbuildinfo
 
 # Editors
 /.atom
