--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,18 +1,28 @@
 {
   "name": "@senv/cli",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "bin": {
     "senv": "dist/index.js"
   },
+  "files": [
+    "dist/**"
+  ],
+  "scripts": {
+    "build": "tsc",
+    "dev": "tsc --watch",
+    "clean": "rm -rf dist && rm -rf node_modules"
+  },
   "dependencies": {
-    "@senv/core": "1.0.0",
+    "@senv/core": "*",
+    "@senv/tsconfig": "*",
     "@types/chalk": "2.2.0",
     "@types/execa": "2.0.0",
     "@types/yargs": "17.0.2",
     "chalk": "4.1.1",
     "execa": "5.1.1",
+    "typescript": "^4.5.4",
     "yargs": "17.0.1"
   }
 }
