--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,8 +1,9 @@
 {
-  "extends": "../../tsconfig.settings.json",
+  "extends": "@senv/tsconfig/base.json",
   "compilerOptions": {
-    "rootDir": "./src",
-    "outDir": "./dist"
+    "rootDir": "src",
+    "outDir": "dist"
   },
-  "include": ["./src"]
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
